# coreclr

./: CMakeLists.txt  clr.coreclr.props  clr.defines.targets
src/binder/: clrprivbinderassemblyloadcontext.cpp
src/coreclr/: CMakeLists.txt
src/coreclr/UWP/: CMakeLists.txt
src/coreclr/UWP/AppxManifest/: AppxManifest.xml
src/coreclr/UWP/CopyWin32Resources/: CMakeLists.txt  CopyWin32Resources.nativeproj
src/coreclr/UWP/Host/: CMakeLists.txt
src/coreclr/UWP/Host/UAPHost/: CMakeLists.txt  UAPHost.cpp  UAPHost.nativeproj
src/coreclr/UWP/Host/UWPHost/: CMakeLists.txt  UWPHost.def  UWPHost.nativeproj  native.rc
src/coreclr/UWP/Host/UWPShim/: CMakeLists.txt  UWPShim.nativeproj  native.rc
src/coreclr/UWP/MSBuildTask/: ErrorCodes.cs  MergePriConfigTask.cs  MergeResWFilesTask.cs  Microsoft.Build.Net.CoreRuntimeTask.csproj  ResourceHandlingTask.cs  WireUpCoreRuntime.cs
src/coreclr/UWP/VSIntegration/: Microsoft.Net.CoreRuntime.targets  VSTargets.proj
src/coreclr/UWP/VSIntegration/dev14/: Microsoft.Net.CoreRuntime.ImportAfter.targets  Microsoft.Net.CoreRuntime.ImportBefore.targets  Microsoft.Net.CoreRuntime.Settings.targets
src/coreclr/UWP/VSIntegration/dev15/: Microsoft.Net.CoreRuntime.ImportAfter.targets  Microsoft.Net.CoreRuntime.ImportBefore.targets
src/mscorlib/Resources/: Strings.resx
src/mscorlib/src/System/Runtime/Loader/: AssemblyLoadContext.cs
src/vm/: appdomain.cpp  appdomain.hpp  assembly.cpp  assemblynative.cpp  assemblynative.hpp  assemblyspec.cpp  assemblyspec.hpp  ceeload.cpp  ceemain.cpp  coreassemblyspec.cpp  domainfile.cpp  domainfile.h  ecalllist.h  eventtrace.cpp  methodtable.inl  methodtablebuilder.cpp  mscorlib.h
